write and get work with postgre ended
